[tool.poetry]
name = "python-ml-pll-rq"
version = "0.1.0"
description = ""
authors = ["will-s-stone <will@williamstone.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
